# tmux-journal

./: .gitignore  ENV_CONF.md  LICENSE  README.md  README_EN.md  capture.sh  install.sh  pyproject.toml  summarize.py  uninstall.sh  watch.sh
